--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
 		"pm2:save": "pm2 save",
 		"pm2:monitor": "pm2 monit",
 		"pm2:startup": "pm2 startup",
-		"start:dev:clean": "npm run stop:all && npm run start:dev",
-		"start:prod:clean": "npm run stop:all && npm run start:prod",
 		"tsoa:spec-and-routes": "tsoa spec && tsoa routes",
 		"build": "npm run clean && npm run tsoa:spec-and-routes && npx tsc && tsc-alias && swc src -d dist --source-maps --copy-files",
 		"build:dev": "npm run clean && npm run build:tsc && swc src -d dist --source-maps --copy-files",
@@ -41,15 +39,14 @@
 		"dev:rabbitmq": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9232 -r ts-node/register -r tsconfig-paths/register src/workers/rabbitMq/index.ts",
 		"dev:kafka": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9233 -r ts-node/register -r tsconfig-paths/register src/workers/kafka/index.ts",
 		"dev:pusher": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9234 -r ts-node/register -r tsconfig-paths/register src/workers/pusher/index.ts",
-		"debug:api": "cross-env NODE_ENV=development nodemon --exec 'node --inspect=0.0.0.0:9229 -r ts-node/register -r tsconfig-paths/register' src/server.ts",
+		"debug:api": "npm run tsoa:spec-and-routes && cross-env NODE_ENV=development nodemon --exec 'node --inspect=0.0.0.0:9229 -r ts-node/register -r tsconfig-paths/register' src/server.ts",
 		"debug:cron": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9230 -r ts-node/register -r tsconfig-paths/register src/workers/cronJob/index.ts",
 		"debug:bullmq": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9231 -r ts-node/register -r tsconfig-paths/register src/workers/bullMq/index.ts",
 		"debug:rabbitmq": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9232 -r ts-node/register -r tsconfig-paths/register src/workers/rabbitMq/index.ts",
 		"debug:kafka": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9233 -r ts-node/register -r tsconfig-paths/register src/workers/kafka/index.ts",
 		"debug:pusher": "cross-env NODE_ENV=development node --inspect=0.0.0.0:9234 -r ts-node/register -r tsconfig-paths/register src/workers/pusher/index.ts",
 		"debug:all-workers": "concurrently -k -n cron,bullmq,rabbitmq,kafka,pusher -c yellow,cyan,magenta,green,blue \"npm run debug:cron\" \"npm run debug:bullmq\" \"npm run debug:rabbitmq\" \"npm run debug:kafka\" \"npm run debug:pusher\"",
-		"test": "glob -c \"node --trace-deprecation --no-warnings --test --require ts-node/register -r tsconfig-paths/register\" \"./src/test/**/*.test.ts\"",
-		"run:test": "./run-tests.sh",
+		"test": "glob -c \"node --trace-deprecation --no-warnings --test --require ts-node/register -r tsconfig-paths/register\" \"./src/**/*.test.ts\"",
 		"lint": "eslint --ignore-path .gitignore --ext .ts src",
 		"lint:fix": "npm run lint -- --fix",
 		"prettier": "npx prettier --config .prettierrc --write .",
@@ -60,81 +57,82 @@
 		"trpc:type": "npx dts-bundle-generator ./src/modules/app.Module.ts -o trpc-types/TRPCAppRouter.d.ts"
 	},
 	"dependencies": {
-		"@kishornaik/utils": "^1.0.6",
-		"@swc/core": "^1.13.5",
-		"@trpc/client": "^11.5.1",
-		"@trpc/server": "^11.5.1",
-		"@types/geoip-lite": "^1.4.4",
-		"class-transformer": "^0.5.1",
-		"class-validator": "^0.14.2",
-		"class-validator-jsonschema": "^5.0.2",
-		"cls-hooked": "^4.2.2",
-		"compression": "^1.8.0",
-		"cookie-parser": "^1.4.7",
-		"cors": "^2.8.5",
-		"dotenv": "^16.6.1",
-		"envalid": "^8.1.0",
-		"express": "^5.1.0",
-		"express-actuator": "^1.8.4",
-		"express-jwt": "^8.5.1",
-		"express-rate-limit": "^7.5.0",
-		"express-slow-down": "^2.1.0",
-		"geoip-lite": "^1.4.10",
-		"helmet": "^8.1.0",
-		"hpp": "^0.2.3",
-		"joi": "^18.0.1",
-		"jsonwebtoken": "^9.0.2",
-		"morgan": "^1.10.0",
-		"reflect-metadata": "^0.2.2",
-		"swagger-ui-express": "^5.0.1",
-		"toobusy-js": "^0.5.1",
-		"tsoa": "^6.6.0",
-		"winston": "^3.17.0",
-		"winston-daily-rotate-file": "^5.0.0",
-		"zod": "^3.25.76"
+		"@kishornaik/utils": "^1.0.9",
+		"@swc/core": "1.13.5",
+		"@trpc/client": "11.5.1",
+		"@trpc/server": "11.5.1",
+		"@types/geoip-lite": "1.4.4",
+		"class-transformer": "0.5.1",
+		"class-validator": "0.14.2",
+		"class-validator-jsonschema": "5.1.0",
+		"cls-hooked": "4.2.2",
+		"compression": "1.8.1",
+		"cookie-parser": "1.4.7",
+		"cors": "2.8.5",
+		"dotenv": "17.2.2",
+		"envalid": "8.1.0",
+		"express": "5.1.0",
+		"express-actuator": "1.8.4",
+		"express-jwt": "8.5.1",
+		"express-rate-limit": "8.1.0",
+		"express-slow-down": "3.0.0",
+		"geoip-lite": "1.4.10",
+		"helmet": "8.1.0",
+		"hpp": "0.2.3",
+		"joi": "18.0.1",
+		"jsonwebtoken": "9.0.2",
+		"morgan": "1.10.1",
+		"reflect-metadata": "0.2.2",
+		"swagger-ui-express": "5.0.1",
+		"toobusy-js": "0.5.1",
+		"tsoa": "6.6.0",
+		"winston": "3.17.0",
+		"winston-daily-rotate-file": "5.0.0",
+		"zod": "4.1.11"
 	},
 	"devDependencies": {
-		"@faker-js/faker": "^9.9.0",
-		"@swc/cli": "^0.7.8",
-		"@types/autocannon": "^7.12.7",
-		"@types/bcrypt": "^5.0.2",
-		"@types/compression": "^1.8.0",
-		"@types/cookie-parser": "^1.4.8",
-		"@types/cors": "^2.8.18",
-		"@types/express": "^5.0.3",
-		"@types/express-jwt": "^7.4.4",
-		"@types/glob": "^8.1.0",
-		"@types/hpp": "^0.2.6",
-		"@types/ioredis": "^4.28.10",
-		"@types/jsonwebtoken": "^9.0.9",
-		"@types/morgan": "^1.9.9",
-		"@types/node": "^24.5.2",
-		"@types/sinon": "^17.0.4",
-		"@types/supertest": "^6.0.3",
-		"@types/swagger-ui-express": "^4.1.8",
-		"@typescript-eslint/eslint-plugin": "^8.44.0",
-		"@typescript-eslint/parser": "^8.44.0",
-		"autocannon": "^8.0.0",
-		"concurrently": "^9.2.1",
-		"cross-env": "^7.0.3",
-		"dts-bundle-generator": "^9.5.1",
-		"eslint": "^9.35.0",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-prettier": "^5.5.4",
-		"expect": "^29.7.0",
-		"glob": "^11.0.2",
-		"husky": "^9.1.7",
-		"node-config": "^0.0.2",
-		"nodemon": "^3.1.10",
-		"pm2": "^6.0.11",
-		"prettier": "^3.6.2",
-		"rimraf": "^6.0.1",
-		"sinon": "^20.0.0",
-		"supertest": "^7.1.4",
-		"ts-node": "^10.9.2",
-		"ts-node-dev": "^2.0.0",
-		"tsc-alias": "^1.8.16",
-		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.9.2"
+		"@express-rate-limit/tsconfig": "1.0.2",
+		"@faker-js/faker": "10.0.0",
+		"@swc/cli": "0.7.8",
+		"@types/autocannon": "7.12.7",
+		"@types/bcrypt": "6.0.0",
+		"@types/compression": "1.8.1",
+		"@types/cookie-parser": "1.4.9",
+		"@types/cors": "2.8.19",
+		"@types/express": "5.0.3",
+		"@types/express-jwt": "7.4.4",
+		"@types/glob": "9.0.0",
+		"@types/hpp": "0.2.6",
+		"@types/ioredis": "5.0.0",
+		"@types/jsonwebtoken": "9.0.10",
+		"@types/morgan": "1.9.10",
+		"@types/node": "24.5.2",
+		"@types/sinon": "17.0.4",
+		"@types/supertest": "6.0.3",
+		"@types/swagger-ui-express": "4.1.8",
+		"@typescript-eslint/eslint-plugin": "8.44.1",
+		"@typescript-eslint/parser": "8.44.1",
+		"autocannon": "8.0.0",
+		"concurrently": "9.2.1",
+		"cross-env": "10.0.0",
+		"dts-bundle-generator": "9.5.1",
+		"eslint": "9.36.0",
+		"eslint-config-prettier": "10.1.8",
+		"eslint-plugin-prettier": "5.5.4",
+		"expect": "30.1.2",
+		"glob": "11.0.3",
+		"husky": "9.1.7",
+		"node-config": "0.0.2",
+		"nodemon": "3.1.10",
+		"pm2": "6.0.13",
+		"prettier": "3.6.2",
+		"rimraf": "6.0.1",
+		"sinon": "21.0.0",
+		"supertest": "7.1.4",
+		"ts-node": "10.9.2",
+		"ts-node-dev": "2.0.0",
+		"tsc-alias": "1.8.16",
+		"tsconfig-paths": "4.2.0",
+		"typescript": "5.9.2"
 	}
 }
